<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.main.DictionaryItemActivitiy">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.MyApplication.AppBarOverlay">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/logoimg"
                android:layout_width="54dp"
                android:layout_height="42dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:contentDescription="@string/logo"
                android:gravity="center"
                android:scaleType="fitCenter"
                android:src="@drawable/philosophylogosm" />

            <TextView
                android:id="@+id/title"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_toStartOf="@id/infoBtn"
                android:layout_toEndOf="@id/logoimg"
                android:fontFamily="@font/lorabold"
                android:gravity="center"
                android:minHeight="?actionBarSize"
                android:padding="@dimen/appbar_padding"
                android:text="@string/app_name"
                android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/infoBtn"
                android:layout_width="45dp"
                android:layout_height="33dp"
                android:layout_alignParentEnd="true"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/about"
                android:gravity="center"
                android:scaleType="fitCenter"
                android:src="@drawable/icons8_info_24" />
        </RelativeLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <org.billthefarmer.markdown.MarkdownView
        android:id="@+id/content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:text="@string/about_description"
        android:textColor="@color/black"
        android:textSize="20dp"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1" />


</LinearLayout>
