<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="kourtis.quadrum.philosophito.ui.main.MoralTheoriesItemActivitiy">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:theme="@style/Theme.MyApplication.AppBarOverlay">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/logoimg"
                android:layout_width="54dp"
                android:layout_height="54dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="12dp"
                android:contentDescription="@string/logo"
                android:gravity="center"
                android:scaleType="fitCenter"
                android:src="@drawable/newlogotrans" />

            <TextView
                android:id="@+id/title"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_toStartOf="@id/infoBtn"
                android:layout_toEndOf="@id/logoimg"
                android:fontFamily="@font/lorabold"
                android:gravity="center"
                android:minHeight="?actionBarSize"
                android:padding="@dimen/small"
                android:text="@string/app_name"
                android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/infoBtn"
                android:layout_width="45dp"
                android:layout_height="33dp"
                android:layout_alignParentEnd="true"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/about"
                android:gravity="center"
                android:scaleType="fitCenter"
                android:src="@drawable/icons8_info_24" />
        </RelativeLayout>

    </com.google.android.material.appbar.AppBarLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2pt"
        android:background="@drawable/myborder"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <org.billthefarmer.markdown.MarkdownView
            android:id="@+id/content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small"
            android:layout_marginEnd="@dimen/small"
            android:layout_marginBottom="@dimen/small"
            android:text="@string/about_description"
            android:textColor="@color/black"
            android:textSize="@dimen/big"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintTop_creator="1" />
    </LinearLayout>


</LinearLayout>
